Pranjal | Rename methods of RoverTest